added logo and description and changed sizes of section banner backgraound

--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
 			</header>
 
 		<!-- Banner -->
-			<section id="banner">
+			<section id="banner" style="padding-bottom: 5em;">
 				<div class="inner">
+					<img src="images/logo.png" height="150px" width="250px" style="margin-top: -60px;z-index: 1">
 					<h2>Spade Sharpners</h2>
-					<p>A free responsive template by <a href="http://templated.co">TEMPLATED</a></p>
-					<ul class="actions">
-						<li><a href="#content" class="button big special">Sign Up</a></li>
-						<li><a href="#elements" class="button big alt">Learn More</a></li>
-					</ul>
+					<p>Best wood working tools sellers & tungsten carbide tiped circular saw repair service providers</p>
+					<!--<ul class="actions">-->
+						<!--<li><a href="#content" class="button big special">Sign Up</a></li>-->
+						<!--<li><a href="#elements" class="button big alt">Learn More</a></li>-->
+					<!--</ul>-->
 				</div>
 			</section>
 
