--- a/index.html
+++ b/index.html
@@ -25,14 +25,11 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-				<h1><a href="#">Ion</a></h1>
+				<h1><a href="#">SPADE SHARPNERS</a></h1>
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+						<li><a href="#" class="button special">Log In</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -40,9 +37,9 @@
 		<!-- Banner -->
 			<section id="banner" style="padding-bottom: 5em;">
 				<div class="inner">
-					<img src="images/logo.png" height="150px" width="250px" style="margin-top: -60px;z-index: 1">
-					<h2>Spade Sharpners</h2>
-					<p>Best wood working tools sellers & tungsten carbide tiped circular saw repair service providers</p>
+					<img src="images/logo.png" height="150px" width="250px" style="margin-top: -4em;z-index: 1">
+					<h2 style="font-weight: 500">Spade Sharpners</h2>
+					<p style="font-weight: 500">Best Wood Working Tools Sellers & Tungsten Carbide Tipped Circular Saw Repair Service Providers</p>
 					<!--<ul class="actions">-->
 						<!--<li><a href="#content" class="button big special">Sign Up</a></li>-->
 						<!--<li><a href="#elements" class="button big alt">Learn More</a></li>-->
