--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
+
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="js/jquery.backstretch.min.js"></script>
+
+
+
 	</head>
 	<body id="top">
 
@@ -191,6 +197,17 @@
 					</ul>
 				</div>
 			</footer>
-
+		<script>
+			$("#banner").backstretch([
+				"images/pic02.jpg",
+				"images/banner.jpg",
+				"images/pic01.jpg",
+				"images/pic03.jpg"
+			], {
+				transition: 'fade',
+				duration: 4000,
+				transitionDuration: 1500
+			});
+		</script>
 	</body>
 </html>
