--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
         <link rel="stylesheet" href="css/skel.css"/>
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/style-xlarge.css"/>
+        <link rel="stylesheet" href="css/animate.css">
     </noscript>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="js/jquery.backstretch.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flexisel/2.2.2/js/jquery.flexisel.js"></script>
+    <script src="https://cdn.jsdelivr.net/lettering/0.7.0/jquery.lettering.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/textillate/0.4.0/jquery.textillate.js"></script>
 
     <script>
         function initMap() {
@@ -59,9 +64,9 @@
     <div class="inner">
         <img src="images/logo.png" height="100px" width="150px" style="margin-top: -4em; ">
         <!--<div style="background-color: #143342">-->
-            <h2 style="font-weight: 200;background-color: #143342;">Spade Sharpners</h2>
-            <p style="font-weight: 500;background-color: #143342";>Best Wood Working Tools Sellers & Tungsten Carbide
-                Tipped Circular Saw Repair Service Providers</p>
+        <h2 style="font-weight: 200;background-color: #143342;">Spade Sharpners</h2>
+        <p style="font-weight: 500;background-color: #143342" class="tlt2">
+            Best Wood Working Tools Sellers & Tungsten Carbide Tipped Circular Saw Repair Service Providers</p>
         <!--</div>-->
         <!--<ul class="actions">-->
         <!--<li><a href="#content" class="button big special">Sign Up</a></li>-->
@@ -252,6 +257,11 @@
         duration: 4000,
         transitionDuration: 1500
     });
+</script>
+<script>
+//    $('.tlt').textillate({initialDelay: 1000, in: {effect: 'rollIn'}});
+    //    $('.tlt2').textillate({initialDelay:1200,out:{effect:'shake'},loop:true});
+    $('.tlt2').textillate({initialDelay: 1000, out:{effect:'shake'},loop:true});
 </script>
 </body>
 </html>
