--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <link rel="stylesheet" href="css/animate.css">
     </noscript>
 
+    <style>
+        tr:nth-child(even) {
+            background-color: transparent;
+        }
+
+        tr:nth-child(odd) {
+            background-color: transparent;
+        }
+    </style>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="js/jquery.backstretch.min.js"></script>
 
@@ -62,7 +72,7 @@
 <!-- Banner -->
 <section id="banner" style="padding-bottom: 5em;">
     <div class="inner">
-        <img src="images/logo.png" height="100px" width="150px" style="margin-top: -4em; ">
+        <img src="images/logo.png" height="150px" width="275px" style="margin-top: -4em;">
         <!--<div style="background-color: #143342">-->
         <h2 style="font-weight: 200;background-color: #143342;">Spade Sharpners</h2>
         <p style="font-weight: 500;background-color: #143342" class="tlt2">
@@ -78,7 +88,7 @@
 <!-- One -->
 <section id="one" class="wrapper style1">
     <header class="major">
-        <h2>We Provide</h2>
+        <h2>We are the leading providers of</h2>
         <!--<p>Tempus adipiscing commodo ut aliquam blandit</p>-->
     </header>
     <div class="container">
@@ -86,7 +96,7 @@
             <div class="4u">
                 <section class="special box" style="background-color: #143342;">
                     <i class="icon fa-area-chart major"></i>
-                    <h3 style="color: white;font-weight: 400;z-index: 8000;">SERVICES</h3>
+                    <h3 style="color: white;font-weight: 400;z-index: 8000;">REPAIR SERVICES</h3>
                     <p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc
                         tincidunt lobortis.</p>
                 </section>
@@ -94,7 +104,7 @@
             <div class="4u">
                 <section class="special box" style="background-color: #143342">
                     <i class="icon fa-refresh major"></i>
-                    <h3 style="color: white;font-weight: 400;">PRODUCTS</h3>
+                    <h3 style="color: white;font-weight: 400;">WOOD WORKING TOOLS</h3>
                     <p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc
                         tincidunt lobortis.</p>
                 </section>
@@ -102,7 +112,7 @@
             <div class="4u">
                 <section class="special box" style="background-color: #143342">
                     <i class="icon fa-cog major"></i>
-                    <h3>Amet sed accumsan</h3>
+                    <h3 style="color: white;font-weight: 400;">SHARPNING TOOLS</h3>
                     <p>Eu non col commodo accumsan ante mi. Commodo consectetur sed mi adipiscing accumsan ac nunc
                         tincidunt lobortis.</p>
                 </section>
@@ -197,10 +207,10 @@
 <footer id="footer">
     <div class="container">
         <div class="row double">
-            <div class="6u">
+            <div class="8u">
                 <div class="row collapse-at-2">
-                    <div class="6u">
-                        <h3>Accumsan</h3>
+                    <div class="4u">
+                        <h3>Branch 1</h3>
                         <ul class="alt">
                             <li><a href="#">Nascetur nunc varius</a></li>
                             <li><a href="#">Vis faucibus sed tempor</a></li>
@@ -208,8 +218,17 @@
                             <li><a href="#">Nascetur nunc varius</a></li>
                         </ul>
                     </div>
-                    <div class="6u">
-                        <h3>Faucibus</h3>
+                    <div class="4u">
+                        <h3>Branch 2</h3>
+                        <ul class="alt">
+                            <li><a href="#">Nascetur nunc varius</a></li>
+                            <li><a href="#">Vis faucibus sed tempor</a></li>
+                            <li><a href="#">Massa amet lobortis vel</a></li>
+                            <li><a href="#">Nascetur nunc varius</a></li>
+                        </ul>
+                    </div>
+                    <div class="4u">
+                        <h3>Branch 3</h3>
                         <ul class="alt">
                             <li><a href="#">Nascetur nunc varius</a></li>
                             <li><a href="#">Vis faucibus sed tempor</a></li>
@@ -219,11 +238,18 @@
                     </div>
                 </div>
             </div>
-            <div class="6u">
-                <h2>Aliquam Interdum</h2>
-                <p>Blandit nunc tempor lobortis nunc non. Mi accumsan. Justo aliquet massa adipiscing cubilia eu
-                    accumsan id. Arcu accumsan faucibus vis ultricies adipiscing ornare ut. Mi accumsan justo
-                    aliquet.</p>
+            <div class="4u">
+                <h2>Contact Us</h2>
+                <table>
+                    <tr>
+                        <td>Phone</td>
+                        <td>34342342</td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td>abc@gmail.com</td>
+                    </tr>
+                </table>
                 <ul class="icons">
                     <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                     <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
